--- a/kontak.html
+++ b/kontak.html
@@ -26,8 +26,7 @@
         </div>
     </header>
 
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+   <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,12 +43,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="kontak.html">Kontak</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="Testimoni.html">Testimoni <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="Testimoni.html">Testimoni</a>
                 </li>
             </ul>
         </div>
     </nav>
+    
     <br>
     <br>
     <br>
